feat: implement three-theme system with light, dark, and OLED modes
Add comprehensive theme support with a new ThemeContext that manages
light, dark, and OLED theme modes. The OLED mode includes power-saving
optimizations for OLED displays.

Changes:
- Add ThemeContext with theme state management and localStorage persistence
- Create ThemeToggle component for cycling between themes
- Extend Tailwind config with OLED variant and custom color palette
  (primary, sand, dune, stone color schemes)
- Update CSS with OLED-specific styling:
  - Reduced brightness and font weights
  - Disabled transitions and shadows for power efficiency
  - Custom styling for buttons, inputs, and cards
- Update all components to support theme variants:
  - SwapInterface: theme-aware colors and gradients
  - WalletConnectModal: theme-aware modal styling
  - VersionDisplay: theme-aware text colors
- Add script in index.html to prevent flash of unstyled content
- Wrap App with ThemeProvider for global theme access

The theme system cycles through: light → dark → OLED → light

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ally — Your Trading Ally on Voi</title>
     <meta name="description" content="Simple & intuitive DEX aggregator for Voi" />
+    <script>
+      // Apply dark mode immediately to prevent flash
+      (function() {
+        const theme = localStorage.getItem('theme') || 'dark';
+        if (theme === 'dark') {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body className="bg-gray-50 min-h-screen">
     <div id="root"></div>
